<resources>
    <string name="app_name">rebo</string>
    <string name="user">Nguyễn Tấn Phú</string>
    <string name="sachcuatui">Sách của tui</string>
    <string name="sachtuithich">Sách tui thích</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="login">Đăng nhập</string>
    <string name="res">Đăng kí</string>
    <string name="detail_naruto">Naruto shippuuden là một tác phẩm của Kishimoto Masashi. Nó cũng nói về Naruto, nhưng là 2 năm sau,sau khi cậu bé cùng sư phụ Jiraiya của mình đi tập luyện xa trở về làng Lá (phần sau của Naruto)</string>
    <string name="detail_naruto_long">Naruto shippuuden là một tác phẩm của Kishimoto Masashi. Nó cũng nói về Naruto, nhưng là 2 năm sau,sau khi cậu bé cùng sư phụ Jiraiya của mình đi tập luyện xa trở về làng Lá (phần sau của Naruto). Phần hai tiếp tục câu chuyện về cậu bé Naruto sau 3 năm tu luyện cùng Jiraiya nay đã trở về làng. Cậu và những người bạn lại tiếp tục lên đường làm nhiệm vụ, đồng thời cũng tìm cách để đưa Sasuke trở về. Madara hồi sinh, cùng với kế hoạch Nguyệt Nhãn quyết nhấn chìm thế giới vào ảo mộng. Đại chiến shinobi lần thứ tư nổ ra. Toàn thế giới nhẫn giả đã kết thành liên minh, cùng chung chí hướng dập tắt âm mưu của Madara và đồng bọn. Liệu đây có phải là cuộc chiến cuối cùng?</string>
    <string name="xem_them">Xem thêm</string>
    <string name="naruto_shippuuden">Naruto Shippuuden</string>
    <string name="kishimoto_masashi">Kishimoto Masashi</string>
    <string name="wonder_women">wonder_women</string>
    <string name="chi_tiet_sach">Thông tin chi tiết</string>
    <string name="sach_moi_nhat">Sách mới nhất</string>
    <string name="doc_nhieu_nhat">Đọc nhiều nhất</string>
    <string name="xem_tat_ca">Xem tất cả</string>
    <string name="label_xem_tat_ca">XEM TẤT CẢ</string>
    <string name="dac_nhan_tam">Ngày 7 tháng 5 năm 1931.\n\n\tTiếng huyên náo và tiếng chân chạy rầm rập trên đường phố New York. Cảnh sát đang rượt đuổi một tên tội phạm nguy hiểm. Cuối cùng, sau rất nhiều nỗ lực và quyết tâm, cảnh sát đã tốm được Crowley “Hai Súng”, một tên giết người hàng loạt, ngay tại nơi mà hắn không ngờ đến : nhà người yêu cầu hắn trên đại lộ West End.

Một trăm năm mươi cảnh sát và mật vụ bao vây toà nhà cao nhất, nơi hắn ẩn náu. Họ chọc thủng mái nhà, phun khói và bố trí cả súng máy tại các cửa sổ của những cao ốc xung quanh. Âm thanh chát chúa của những tràng súng máy và súng ngắn vang lên liên tục trong hơn một giờ đồng hồ. Bên trong căn phòng ở tầng cao nhất ấy, Crowley ẩn người sau những chiếc ghế bành độn bông dày, quyết liệt chống trả lực lượng cảnh sát bằng những tràng súng liên thanh. Nhưng cuối cùng, tên tội phạm có tài thiện xạ này cũng phải đầu hàng.

Cảnh sát trưởng New York, ông E. P. Mulrooney nhấn mạnh rằng tên Crowley “Hai Súng” là một trong những tên tội phạm nguy hiểm và tàn ác nhất trong lịch sử tội phạm ở thành phố đông dân nhất nước Mỹ này. Một điểm rất đáng lưu ý về con người Crowley là: “Chỉ một lý do cỏn con, thặm chí không cần có lý do nào, hoặc đơn giản để giải sầu, hắn cũng có thể chĩa súng vào người khác và bóp cò". Tuy nhiên, đó là suy nghĩ của cảnh sát. Riêng tên tội phạm máu lạnh này lại không nghĩ như thế. Khi bên ngoài cảnh sát tìm mọi cách để bắt hắn thì trong phòng, Crowley đang viết một bức thư. Bức thư còn dính vết máu đỏ. Và, đây là những gì Crowley đã viết: “Dưới lớp áo này là một trái tim mệt mỏi nhưng dịu dàng – một trái tim không hề làm tổn thương ai”. Đọc những dòng này, ai chẳng thấy lòng mình xúc động nhưng sự thật thì lại trái ngược với những gì hắn viết. Chỉ vài giờ trước đó, Crowley đã nỗ súng vào một cảnh sát giao thông khi anh ta chặn xe hắn để kiểm tra bằng lái. Khi viên cảnh sát ngã gục xuống, Crowley đã nhảy ra khỏi xe, chộp khẩu súng ngắn của nạn nhân và lạnh lùng bồi thêm một phát nữa vào thân hình đang run rẩy hấp hối. Crowley bị kết án tử hình. Trên ghế điện ở nhà tù Sing Sing, hắn còn nguỵ biện rằng: “Phải chăng đây là sự trừng phạt mà tôi phải chịu vì đã giết người? Không! Đây là sựï trừng phạt mà tôi phải chịu chỉ vì tôi cần tự bảo vệ mình”.</string>
</resources>
