<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Content -->

    <RelativeLayout
        android:id="@+id/activity_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimens/activity_vertical_margin"
        android:paddingLeft="@dimens/activity_horizontal_margin"
        android:paddingRight="@dimens/activity_horizontal_margin"
        android:paddingTop="@dimens/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/activity_main_tv_empty"
            android:layout_centerInParent="true"
            android:text="@strings/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <!-- Left Menu -->

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <!-- Header -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/navigation_header_height"
                android:background="@drawable/bkg_user"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                >

                <ImageView
                    android:id="@+id/activity_main_imv_avatar"
                    android:layout_width="@dimen/empty_icon_width"
                    android:layout_height="@dimen/empty_icon_height"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    app:srcCompat="@drawable/user" />

                <TextView
                    android:id="@+id/activity_main_tv_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/user"
                    />

            </LinearLayout>

            <!-- Item sach cua tui -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/navigation_item_height"
                android:layout_marginTop="@dimen/padding_tiny_plus_one"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="@dimen/navigation_item_icon_size"
                    android:layout_height="@dimen/navigation_item_icon_size"
                    android:src="@drawable/sachcuatui" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_extra_extra_large"
                    android:text="@string/sachcuatui" />

            </LinearLayout>

            <!-- Item sach tui thich -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/navigation_item_height"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="@dimen/navigation_item_icon_size"
                    android:layout_height="@dimen/navigation_item_icon_size"
                    android:src="@drawable/sachtuithich" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_extra_extra_large"
                    android:text="@string/sachtuithich" />

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>