<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context=".ActivityDetail"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light"
    >

    <LinearLayout
        android:id="@+id/header_book"
        android:layout_width="match_parent"
        android:layout_height="@dimen/book_header_height"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/book_height"
            >
        <com.yinglan.shadowimageview.ShadowImageView
            android:id="@+id/img_detail"
            android:layout_width="@dimen/book_width"
            android:layout_height="@dimen/book_height"
            android:layout_gravity="center"
            app:shadowSrc="@drawable/comic"
            app:shadowColor="@android:color/black"
            android:layout_centerHorizontal="true"
            />
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                app:lottie_fileName="heart.json"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
        <TextView
            android:id="@+id/name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/naruto_shippuuden"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/author_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/padding_medium"
            android:text="@string/kishimoto_masashi"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/name_detail"/>



        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/transition_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@+id/header_book"
        android:orientation="vertical"
        >

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/padding_tiny"
            android:background="@color/view" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >
        <com.ms.square.android.expandabletextview.ExpandableTextView
            android:id="@+id/expandable_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:maxCollapsedLines="3">
            <TextView
                android:id="@+id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
            <ImageButton
                android:id="@+id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"/>
        </com.ms.square.android.expandabletextview.ExpandableTextView>

    </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/padding_tiny"
            android:background="@color/view" />
    <LinearLayout
        android:id="@+id/layout_doc_sach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:gravity="center"

        >
        <info.hoang8f.widget.FButton
            android:id="@+id/tai_sach"
            android:layout_width="@dimen/detail_padding"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_large"
            android:text="Tải sách"
            android:textSize="@dimen/textsize_label"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            app:fButtonColor="@color/fbutton_color_green_sea"
            fbutton:shadowColor="@color/fbutton_color_asbestos"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="4dp"
            fbutton:cornerRadius="25dp"
            />
            <!--android:background="@drawable/heart_off"/>-->
        <info.hoang8f.widget.FButton
            android:id="@+id/doc_sach"
            android:layout_width="@dimen/detail_padding"
            android:layout_height="wrap_content"
            android:text="Đọc sách"
            android:textAllCaps="false"
            android:textSize="@dimen/textsize_label"
            android:textColor="@android:color/white"
            app:fButtonColor="@color/fbutton_color_green_sea"
            fbutton:shadowColor="@color/fbutton_color_asbestos"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="4dp"
            fbutton:cornerRadius="25dp"/>
    </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/padding_tiny"
            android:background="@color/view" />
    <LinearLayout
        android:id="@+id/layout_chi_tiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/chi_tiet_sach"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/detail_padding"
                android:layout_height="wrap_content"
                android:text="Thể loại"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Truyện tranh"
                android:textColor="@android:color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/detail_padding"
                android:layout_height="wrap_content"
                android:text="Ngày xuất bản"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18/06/1997"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/detail_padding"
                android:layout_height="wrap_content"
                android:text="Nhà xuất bản"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nhà xuất bản Kim Đồng"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>


</RelativeLayout>
</ScrollView>